--- a/README
+++ b/README
@@ -1,6 +1,12 @@
-ve.net.dcs.AttachmentScanner IS APLUGIN THAT IMPLEMENTS 
+ve.net.dcs.AttachmentScanner IS A PLUGIN THAT IMPLEMENTS 
 THE INTERFACE 'SANE' TO SCAN DIRECTLY FROM IDEMPPIERE
 
 FOR MORE INFORMATION
 http://www.sane-project.org/
 http://es.wikipedia.org/wiki/Scanner_Access_Now_Easy
+
+REQUIREMENTS: 
+HAVE INSTALLED AND CONFIGURED 'SANE' ON THE SERVER
+
+FEATURES: 
+SUPPORT ONLY FOR IDEMPIERE WEBUI
