--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-ve.net.dcs.AttachmentScanner IS A PLUGIN THAT IMPLEMENTS 
-THE INTERFACE 'SANE' TO SCAN DIRECTLY FROM IDEMPPIERE
+THIS PLUGIN IMPLEMENTS THE INTERFACE 'SANE' TO SCAN DIRECTLY FROM IDEMPPIERE
 
 FOR MORE INFORMATION
 http://www.sane-project.org/
