Add link to documentation

--- a/AttachmentScannerUI/resource/locale/en_US.properties
+++ b/AttachmentScannerUI/resource/locale/en_US.properties
@@ -20,6 +20,8 @@ ViewScan.unexpectedError = Unexpected error
 ViewScan.noScan = You must scan
 ViewScan.noSave = Failed to save
 ViewScan.lblPort = Port
+ViewScan.errorGoDocumentation = Failed access to the documentation
+ViewScan.mniDocumentation = Documentation
 
 #ViewWait
 ViewWait.title = Wait
