--- a/AttachmentScannerUI/resource/locale/es_VE.properties
+++ b/AttachmentScannerUI/resource/locale/es_VE.properties
@@ -20,6 +20,8 @@ ViewScan.unexpectedError = Error inesperado
 ViewScan.noScan = Debe escanear una imagen
 ViewScan.noSave = Error al guardar
 ViewScan.lblPort = Puerto
+ViewScan.errorGoDocumentation = No se pudo acceder a la documentación
+ViewScan.mniDocumentation = Documentación
 
 #ViewWait
 ViewWait.title = Espere
