Add resolution to test app

--- a/AttachmentScannerUI/resource/locale/en_US.properties
+++ b/AttachmentScannerUI/resource/locale/en_US.properties
@@ -9,6 +9,7 @@ ViewScan.mnuLocale = Locale
 ViewScan.mniClose = Close
 ViewScan.mniAbout = About
 ViewScan.lblHost = Host	
+ViewScan.lblResolution = Resolution
 ViewScan.btnSearch = Search
 ViewScan.lblDevice = Device
 ViewScan.btnScan = Scan
