--- a/AttachmentScannerUI/resource/locale/es_VE.properties
+++ b/AttachmentScannerUI/resource/locale/es_VE.properties
@@ -9,6 +9,7 @@ ViewScan.mnuLocale = Localización
 ViewScan.mniClose = Cerrar
 ViewScan.mniAbout = Sobre
 ViewScan.lblHost = Host	
+ViewScan.lblResolution = Resolución
 ViewScan.btnSearch = Buscar
 ViewScan.lblDevice = Dispositivo
 ViewScan.btnScan = Escanear
