Adding duplex capability to gui

--- a/attachscan-gui/src/main/resources/locale/en.properties
+++ b/attachscan-gui/src/main/resources/locale/en.properties
@@ -7,6 +7,7 @@ ViewScan.mnuHelp=Help
 ViewScan.mnuLocale=Locale
 ViewScan.mniClose=Close
 ViewScan.mniAbout=About
+ViewScan.fileSavedIn=File saved in
 ViewScan.lblHost=Host	
 ViewScan.lblResolution=Resolution
 ViewScan.btnSearch=Search
@@ -22,6 +23,7 @@ ViewScan.noSave=Failed to save
 ViewScan.lblPort=Port
 ViewScan.errorGoDocumentation=Failed access to the documentation
 ViewScan.mniDocumentation=Documentation
+ViewScan.duplex=Duplex
 #ViewWait
 ViewWait.title=Wait
 ViewWait.message=Please wait
